--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <ul class="footer__column-links">
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/youtube-icon.svg" class="footer__social-icon" alt="Youtube">
+                <img src="./images/youtube-icon.svg" class="footer__social-icon" alt="Ютуб">
                 Youtube
               </a>
             </li>
@@ -159,7 +159,7 @@
             </li>
             <li>
               <a href="#" class="footer__column-link">
-                <img src="./images/tiktok-icon.svg" class="footer__social-icon" alt="Tiktok">
+                <img src="./images/tiktok-icon.svg" class="footer__social-icon" alt="Тикток">
                 Tiktok
               </a>
             </li>
